# rad-synth

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
docker/: Dockerfile  docker-compose.yml
src/: lib.rs  model.rs
src/domain/: engine.rs  mod.rs
src/domain/noise/: drift.rs  gaussian.rs  impulse.rs  mod.rs
src/domain/sensors/: gamma.rs  mod.rs  neutron.rs  uv.rs
src/infra/: config.rs  mod.rs  mqtt.rs
