[package]
name        = "sensor_sim"
version     = "0.1.0"
edition     = "2021"
authors     = ["Your Name <you@example.com>"]
license     = "MIT"

[dependencies]
tokio       = { version = "1.38", features = ["rt-multi-thread", "macros"] }
rand        = { version = "0.8", features = ["small_rng"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
rumqttc     = { version = "0.23", default-features = false, features = ["use-rustls"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1.7", features = ["v4", "serde"] }
config      = "0.14"
dotenvy     = "0.15"
anyhow      = "1.0"
thiserror   = "1.0"
rand_distr = "0.4"